# libserialport

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile.am  NEWS  README  autogen.sh  config-pattern  configure.ac  freebsd.c  libserialport.h  libserialport.h.in  libserialport.pc.in  libserialport_internal.h  linux.c  linux_termios.c  linux_termios.h  macosx.c  mingw64.mak  serialport.c  serialport.h  test_timing.c  timing.c  windows.c  windows_ddk.c  windows_ddk.h
cmake/: CheckAttributes.cmake  CheckDeclarations.cmake  CheckFunctions.cmake  CheckIncludes.cmake  CheckSys.cmake  CheckTypes.cmake  config.h.in  libserialport.pc.in
examples/: .gitignore  CMakeLists.txt  Makefile  README  await_events.c  examples.sln  handle_errors.c  list_ports.c  port_config.c  port_info.c  send_receive.c
